<resources>
    <string name="app_name">AGDesk</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tasks">Tasks</string>
    <string name="inventory">Inventory</string>
    <string name="assets">Assets</string>
    <string name="map">Map</string>
    <string name="add_field">Add Field</string>
    <string-array name="task_sort_list">
        <item>All</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>