<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/tasks" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_inventory"
        android:title="@string/inventory" />

    <item
        android:id="@+id/navigation_assets"
        android:icon="@drawable/baseline_dataset_24"
        android:title="@string/assets" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />

</menu>